# rust-server-test

./: .env  Cargo.toml
src/: main.rs
src/api/: user_api.rs
src/models/: user_model.rs
src/repository/: mongodb_repository.rs
