[package]
name = "rust-server-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
tokio = "1.19.2"
serde = "1.0.136"
dotenv = "0.15.0"
chrono = "0.4"
bcrypt = "0.13"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 
